--- a/relatorios.html
+++ b/relatorios.html
@@ -8,7 +8,7 @@
     <script src="relatorios.js"></script>
     <title>Document</title>
 </head>
-<body>
+<body onload="carregaInfo()">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
