--- a/eventos.html
+++ b/eventos.html
@@ -8,7 +8,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h3>Relatório de Eventos por Periodo</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <label for="txtDataIni" class="form-label">Data de Início</label>
+                <input type="date" id="txtDataIni" class="form-control">
+            </div>
+
+            <div class="col-6">
+                <label for="txtDataFim" class="form-label">Data de Término</label>
+                <input type="date" id="txtDataFim" class="form-control">
+            </div>
+        </div>
+
+
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
