Relatorio de eventos

--- a/eventos.html
+++ b/eventos.html
@@ -16,14 +16,18 @@
         </div>
 
         <div class="row">
-            <div class="col-6">
+            <div class="col-5">
                 <label for="txtDataIni" class="form-label">Data de Início</label>
                 <input type="date" id="txtDataIni" class="form-control">
             </div>
 
-            <div class="col-6">
+            <div class="col-5">
                 <label for="txtDataFim" class="form-label">Data de Término</label>
                 <input type="date" id="txtDataFim" class="form-control">
+            </div>
+
+            <div class="col-2">
+                <button type="button" class="btn btn-primary" onclick="gerarRelatorio()">Gerar</button>
             </div>
         </div>
 
