--- a/eventos.html
+++ b/eventos.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
     <div class="container">
         <div class="row">
@@ -15,18 +18,20 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-5">
+        <div class="row mb-3">
+            <div class="col-6">
                 <label for="txtDataIni" class="form-label">Data de Início</label>
                 <input type="date" id="txtDataIni" class="form-control">
             </div>
 
-            <div class="col-5">
+            <div class="col-6">
                 <label for="txtDataFim" class="form-label">Data de Término</label>
                 <input type="date" id="txtDataFim" class="form-control">
             </div>
+        </div>
 
-            <div class="col-2">
+        <div class="row">
+            <div class="col-12">
                 <button type="button" class="btn btn-primary" onclick="gerarRelatorio()">Gerar</button>
             </div>
         </div>
@@ -35,6 +40,9 @@
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
